feat: added test cases for CRUD of books
