# app/swagger/swagger.json
@@ -1,146 +1,109 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "version": "1.0.0",
-      "title": "Bookstore App",
-      "description": "Bookstore Application API",
-      "license": {
-        "name": "MIT",
-        "url": "https://opensource.org/licenses/MIT"
+  "swagger": "2.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "Bookstore App",
+    "description": "Bookstore Application API",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
+  },
+  "host": "localhost:3000",
+  "basePath": "/",
+  "tags": [
+    {
+      "name": "Users",
+      "description": "API for users in the system"
+    }
+  ],
+  "schemes": [
+    "http"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
+  "paths": {
+    "/register-user": {
+      "post": {
+        "tags": [
+          "Registration"
+        ],
+        "description": "Create new contact in system",
+        "parameters": [
+          {
+            "name": "add",
+            "in": "body",
+            "description": "contact that we want to create",
+            "schema": {
+              "$ref": "#/definitions/registerUser"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schema": {
+          "$ref": "#/definitions/register"
+        },
+        "responses": {
+          "200": {
+            "description": "New user is created"
+          },
+          
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
+          }
+        }
       }
     },
-    "host": "localhost:3000",
-    "basePath": "/",
-    "tags": [
-      {
-        "name": "Users",
-        "description": "API for users in the system"
+
+    "/register-admin": {
+      "post": {
+        "tags": [
+          "Registration"
+        ],
+        "description": "Create new contact in system",
+        "parameters": [
+          {
+            "name": "add",
+            "in": "body",
+            "description": "contact that we want to create",
+            "schema": {
+              "$ref": "#/definitions/registerUser"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schema": {
+          "$ref": "#/definitions/register"
+        },
+        "responses": {
+          "200": {
+            "description": "New user is created"
+          },
+          
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
+          }
+        }
       }
-    ],
-    "schemes": [
-      "http"
-    ],
-    "consumes": [
-      "application/json"
-    ],
-    "produces": [
-      "application/json"
-    ],
-    "paths": {
-      "/register-user": {
-        "post": {
-          "tags": [
-            "Registration"
-          ],
-          "description": "Create new contact in system",
-          "parameters": [
-            {
-              "name": "add",
-              "in": "body",
-              "description": "contact that we want to create",
-              "schema": {
-                "$ref": "#/definitions/registerUser"
-              }
-            }
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "schema": {
-            "$ref": "#/definitions/register"
-          },
-          "responses": {
-            "200": {
-              "description": "New user is created"
-            },
-            
-            "400": {
-              "description": "Bad Request"
-            },
-            
-            "500": {
-              "description": "Internal server error"
-            }
-          }
-        }
-      },
-
-      "/register-admin": {
-        "post": {
-          "tags": [
-            "Registration"
-          ],
-          "description": "Create new contact in system",
-          "parameters": [
-            {
-              "name": "add",
-              "in": "body",
-              "description": "contact that we want to create",
-              "schema": {
-                "$ref": "#/definitions/registerUser"
-              }
-            }
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "schema": {
-            "$ref": "#/definitions/register"
-          },
-          "responses": {
-            "200": {
-              "description": "New user is created"
-            },
-            
-            "400": {
-              "description": "Bad Request"
-            },
-            
-            "500": {
-              "description": "Internal server error"
-            }
-          }
-        }
-      },
-
-      "/user-login": {
-        "post": {
-          "tags": [
-            "Login"
-          ],
-          "description": "login user in system",
-          "parameters": [
-            {
-              "name": "login",
-              "in": "body",
-              "description": "User that we want to login",
-              "schema": {
-                "$ref": "#/definitions/login"
-              }
-            }
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "schema": {
-            "$ref": "#/definitions/login"
-          },
-          "responses": {
-            "200": {
-              "description": "New login"    
-            },
-            "400": {
-              "description": "Bad Request"
-            },
-            
-            "500": {
-              "description": "Internal server error"
-            }
-          }
-        }
     },
 
-    "/admin-login": {
+    "/user-login": {
       "post": {
         "tags": [
           "Login"
@@ -177,86 +140,123 @@
       }
   },
 
-  "/forgot-password": {
+  "/admin-login": {
     "post": {
-        "tags": [
-            "BookStore"
-        ],
-        "summary": "Forgot Password",
-        "parameters": [
-            {
-                "in": "email",
-                "name": "body",
-                "description": "forgot password"
-            }
-        ],
-        "produces": [
-            "application/json"
-        ],
-        "responses": {
-            "200": {
-                "description": "sent mail successfully"
-            },
-            "400": {
-                "description": "Bad Request"
-            },
-            "404":{
-              "description": "Not Found"
-            },
-            "505":{
-              "description":"Internal server error"
-            },
-            "schema": {
-              "$ref": "#/definitions/forgot-password"
-            }
+      "tags": [
+        "Login"
+      ],
+      "description": "login user in system",
+      "parameters": [
+        {
+          "name": "login",
+          "in": "body",
+          "description": "User that we want to login",
+          "schema": {
+            "$ref": "#/definitions/login"
+          }
         }
+      ],
+      "produces": [
+        "application/json"
+      ],
+      "schema": {
+        "$ref": "#/definitions/login"
+      },
+      "responses": {
+        "200": {
+          "description": "New login"    
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        
+        "500": {
+          "description": "Internal server error"
+        }
+      }
     }
+},
+
+"/forgot-password": {
+  "post": {
+      "tags": [
+          "BookStore"
+      ],
+      "summary": "Forgot Password",
+      "parameters": [
+          {
+              "in": "email",
+              "name": "body",
+              "description": "forgot password"
+          }
+      ],
+      "produces": [
+          "application/json"
+      ],
+      "responses": {
+          "200": {
+              "description": "sent mail successfully"
+          },
+          "400": {
+              "description": "Bad Request"
+          },
+          "404":{
+            "description": "Not Found"
+          },
+          "505":{
+            "description":"Internal server error"
+          },
+          "schema": {
+            "$ref": "#/definitions/forgot-password"
+          }
+      }
+  }
 }
 },
 
-    "definitions": {
-      "registerUser": {
-        "type": "object",
-        "properties": {
-          "firstName": {
-            "type": "string"
-          },
-          "lastName": {
-              "type":"string"
-          },
-          "emailId": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        }
-      },
-      "login": {
-        "type": "object",
-        "properties": {
-          "emailId" : {
-            "type" :"string"
-          },
+  "definitions": {
+    "registerUser": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+            "type":"string"
+        },
+        "emailId": {
+          "type": "string"
+        },
         "password": {
           "type": "string"
-          }
         }
-      },
-      "forgot-password":{
-        "type":"object",
-        "properties":{
-          "emailId":{
-            "type":"string"
-          }
-        }
-      },
-    "securityDefinitions" : {
-      "JWT" : {
-        "type": "apiKey",
-        "name": "token",
-        "in": "header"
       }
+    },
+    "login": {
+      "type": "object",
+      "properties": {
+        "emailId" : {
+          "type" :"string"
+        },
+      "password": {
+        "type": "string"
+        }
+      }
+    },
+    "forgot-password":{
+      "type":"object",
+      "properties":{
+        "emailId":{
+          "type":"string"
+        }
+      }
+    },
+  "securityDefinitions" : {
+    "JWT" : {
+      "type": "apiKey",
+      "name": "token",
+      "in": "header"
     }
   }
+}
 }
